--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -204,8 +204,11 @@ jobs:
       - run:
           command: |
             cd grpc/disruption_listener
-            apt-get upgrade
-            apt install -y protobuf-compiler
+            PROTOC_ZIP=protoc-3.14.0-linux-x86_64.zip
+            curl -OL https://github.com/protocolbuffers/protobuf/releases/download/v3.14.0/$PROTOC_ZIP
+            sudo unzip -o $PROTOC_ZIP -d /usr/local bin/protoc
+            sudo unzip -o $PROTOC_ZIP -d /usr/local 'include/*'
+            rm -f $PROTOC_ZIP
             go get google.golang.org/protobuf/cmd/protoc-gen-go@latest
             go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
             protoc --proto_path=. --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative disruption_listener.proto
