--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -206,8 +206,8 @@ jobs:
             cd grpc/disruption_listener
             PROTOC_ZIP=protoc-3.14.0-linux-x86_64.zip
             curl -OL https://github.com/protocolbuffers/protobuf/releases/download/v3.14.0/$PROTOC_ZIP
-            sudo unzip -o $PROTOC_ZIP -d /usr/local bin/protoc
-            sudo unzip -o $PROTOC_ZIP -d /usr/local 'include/*'
+            unzip -o $PROTOC_ZIP -d /usr/local bin/protoc
+            unzip -o $PROTOC_ZIP -d /usr/local 'include/*'
             rm -f $PROTOC_ZIP
             go get google.golang.org/protobuf/cmd/protoc-gen-go@latest
             go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
