--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -212,6 +212,7 @@ jobs:
             unzip -o $PROTOC_ZIP -d /usr/local 'include/*'
             rm -f $PROTOC_ZIP
             go get google.golang.org/protobuf/cmd/protoc-gen-go@v1.27.1
+            go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1.0
             protoc --proto_path=. --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative disruption_listener.proto
       - run: git diff --exit-code
 
