--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -214,7 +214,7 @@ jobs:
             go get google.golang.org/protobuf/cmd/protoc-gen-go@v1.27.1
             go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1.0
             protoc --proto_path=. --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative disruption_listener.proto
-      - run: git diff --exit-code
+      - run: git diff ':!go.*' --exit-code
 
 workflows:
   version: 2
