--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,12 @@ stages:
   - pre-release
   - release
   - release-public
+  - notify
+
+# Slack Notify Image
+.slack-notifier-base:
+  tags: [ "runner:main", "size:large" ]
+  image: 486234852809.dkr.ecr.us-east-1.amazonaws.com/slack-notifier:latest
 
 # CI image
 .docker-runner: &docker-runner
@@ -190,3 +196,36 @@ release-docker-hub-tag:
     - tags
   variables:
     TAG: "${CI_COMMIT_TAG}"
+
+slack-notifier-pre-release.on-failure:
+  extends: .slack-notifier-base
+  when: on_failure
+  stage: pre-release
+  allow_failure: true
+  script:
+    - BUILD_URL="$CI_PROJECT_URL/pipelines/$CI_PIPELINE_ID"
+    - 'MESSAGE_TEXT=":siren:   | Pre-Release Pipeline Failure | [ $CI_PROJECT_NAME ][ $CI_COMMIT_REF_NAME ] [ <$BUILD_URL|$CI_PIPELINE_ID> ]   :siren:"'
+    - postmessage "#test-chaosnotifier" "$MESSAGE_TEXT"
+
+slack-notifier-release.on-failure:
+  extends: .slack-notifier-base
+  when: on_failure
+  stage: release
+  allow_failure: true
+  script:
+    - BUILD_URL="$CI_PROJECT_URL/pipelines/$CI_PIPELINE_ID"
+    - 'MESSAGE_TEXT=":siren:   | Release Pipeline Failure | [ $CI_PROJECT_NAME ][ $CI_COMMIT_REF_NAME ] [ <$BUILD_URL|$CI_PIPELINE_ID> ]   :siren:"'
+    - postmessage "#test-chaosnotifier" "$MESSAGE_TEXT"
+
+slack-notifier-build.on-failure:
+  extends: .slack-notifier-base
+  when: on_failure
+  stage: build
+  allow_failure: true
+  only:
+    - main
+    - tags
+  script:
+    - BUILD_URL="$CI_PROJECT_URL/pipelines/$CI_PIPELINE_ID"
+    - 'MESSAGE_TEXT=":siren:   | Build Pipeline Failure | [ $CI_PROJECT_NAME ][ $CI_COMMIT_REF_NAME ] [ <$BUILD_URL|$CI_PIPELINE_ID> ]   :siren:"'
+    - postmessage "#test-chaosnotifier" "$MESSAGE_TEXT"
