--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,18 @@ stages:
   - pre-release
   - release
   - release-public
+  - notify
+
+# Slack Notify Base
+.slack-notifier-base:
+  tags: [ "runner:main", "size:large" ]
+  image: 486234852809.dkr.ecr.us-east-1.amazonaws.com/slack-notifier:latest
+  allow_failure: true
+  when: on_failure
+  script:
+    - BUILD_URL="$CI_PROJECT_URL/pipelines/$CI_PIPELINE_ID"
+    - 'MESSAGE_TEXT=":siren: | $CI_PIPELINE_NAME Pipeline Failure | [ $CI_PROJECT_NAME ][ $CI_COMMIT_REF_NAME ] [ <$BUILD_URL|$CI_PIPELINE_ID> ]   :siren:"'
+    - postmessage "#chaos-ops" "$MESSAGE_TEXT"
 
 # CI image
 .docker-runner: &docker-runner
@@ -190,3 +202,24 @@ release-docker-hub-tag:
     - tags
   variables:
     TAG: "${CI_COMMIT_TAG}"
+
+slack-notifier-pre-release.on-failure:
+  extends: .slack-notifier-base
+  variables:
+    CI_PIPELINE_NAME: "Pre-Release"
+  stage: pre-release
+
+slack-notifier-release.on-failure:
+  extends: .slack-notifier-base
+  variables:
+    CI_PIPELINE_NAME: "Release"
+  stage: release
+
+slack-notifier-build.on-failure:
+  extends: .slack-notifier-base
+  variables:
+    CI_PIPELINE_NAME: "Build"
+  stage: build
+  only:
+    - main
+    - tags
